--- a/src/app/components/user-tour/user-tour.component.html
+++ b/src/app/components/user-tour/user-tour.component.html
@@ -2,13 +2,13 @@
     
 <header >
     <div class="row center-lg center-md center-xs center-sm center-ms">
-        <div>
+        <div class="titre">
              <h1>Emploi du temps en ligne</h1>
          </div>
         
     </div>
 </header>
-<section>
+ <!-- <section class="partie1">
     <div class="description">
         <div class="row center-lg center-md center-xs center-sm center-ms">
             <div>
@@ -16,16 +16,16 @@
             </div>
         </div>
 </div>
-</section>
-<section class="cadre">
+</section>  -->
+<section class="cadre partie2">
  
 
         <div class="row center-lg center-ms center-lg center-sm center-xs">
                 <div  class="col-lg-12 col-ms-12 col-sm-12 col-md-12">
                     <h3>Service nettoyage:</h3>
                    <marquee behavior="" direction=""><p>{{this.nettoyage}}</p> </marquee> 
-                    <h3>Service payement:</h3>
-                   <marquee behavior="" direction=""> <p>{{this.payement}}</p></marquee>
+                    <h3>Service cuisine:</h3>
+                   <marquee behavior="" direction=""> <p>{{this.cuisine}}</p></marquee>
                 </div>
          </div>
 </section> 
