--- a/src/app/components/user-tour/user-tour.component.scss
+++ b/src/app/components/user-tour/user-tour.component.scss
@@ -22,25 +22,26 @@ h1,h2,h3,h4,p{
     background-color: rgb(177, 45, 45);
 
 }
-@media(max-width: 430px){
+@media(max-width: 768px){
     .cadre{
-      margin-top: 40px;
+      //margin-top: 85px;
         
     }
 }
 
-@media(max-width: 340px){
-    .cadre{
-        margin-top: 85px;
-    }
-}
+// @media(max-width: 340px){
+//     .cadre{
+//         margin-top: 85px;
+//     }
+// }
 
 marquee p{
  }
-section{
+.partie1,.partie2{
     padding-left: 50px;
     padding-right: 50px;
 }
+
 /*description*/
  .para{
 text-align: center;
@@ -58,4 +59,6 @@ footer{
 ul li{
     list-style: none;
 }
+
+
 
